Aligning content correctly.

--- a/public/css/global.styl
+++ b/public/css/global.styl
@@ -108,13 +108,12 @@ h3
 
 .gallery
 
+  margin-left 150px
+
   img
     padding 2px 4px
-    width 100%
 
   a
-    width 100%
-    height auto
     display inline-block
 
   a:hover
@@ -131,6 +130,8 @@ h3
 
 @media (max-width: 1024px)
   .gallery
+    margin-left 0
+
   .sub-navigation
     float none
     padding-bottom 30px
@@ -148,6 +149,7 @@ h3
 
 @media (max-width: 640px)
   .gallery
+    text-align: center;
   h1
     font-size 53px
     margin 40px 0 30px 0
